# rust-dll-hollowing

./: Cargo.toml  README.md
projects/encrypt_shellcode/: Cargo.toml
projects/encrypt_shellcode/src/: encrpt.rs  main.rs
projects/injector/: Cargo.toml
projects/injector/src/: encrypt.rs  main.rs  security.rs
