[package]
name = "encrypt_shellcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
obfstr = "0.4.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
